--- a/BeneluxWebb/templates/partials/_stats_table_sticky.html
+++ b/BeneluxWebb/templates/partials/_stats_table_sticky.html
@@ -29,7 +29,7 @@
             {% for player in data %}
             <tr class="player-row" data-row="{{ loop.index0 }}">
                 <td>
-                    <a class="player-link" href="https://www.faceit.com/en/players/{{ player['player_name'] }}">
+                    <a class="player-link" href="https://www.faceit.com/en/players/{{ player['player_name'] }}" target="_blank">
                         <div class="d-flex align-items-center">
                             <img
                                 src="{{ player['avatar'] if player['avatar'] else url_for('static', filename='img/faceit/player_avatar_placeholder.jpg') }}"
