--- a/BeneluxWebb/templates/esea.html
+++ b/BeneluxWebb/templates/esea.html
@@ -10,37 +10,76 @@
 {% block content %}
 
 <!-- center-aligned tabs -->
-<div class="esea-wrapper">
-  <ul class="season-nav nav nav-tabs" id="eseaTabs" role="tablist">
-    {% for season in season_info %}
-      {% set label = "" %}
-      {% if season.event_start and season.event_end %}
-        {% if current_time >= season.event_start and current_time <= season.event_end %}
-          {% set label = "ongoing" %}
-        {% elif current_time >= season.event_start - 604800 and current_time < season.event_start %} {# 604800 seconds = 7 days #}
-          {% set label = "starting soon" %}
-        {% endif %}
-      {% endif %}
-      <li class="nav-item" role="presentation">
-        <button 
-          class="nav-link d-flex align-items-center gap-2 {% if loop.first %}active{% endif %}" 
-          id="season-tab-{{ season.season_number }}"
-          data-season="{{ season.season_number }}"
-          type="button"
-          role="tab"
-        >
-          <span>Season {{ season.season_number }}</span>
-          {% if label %}
-            <span class="badge bg-secondary">{{ label }}</span>
-          {% endif %}
-        </button>
-      </li>
-    {% endfor %}
-  </ul>
+<div class="esea-page-wrapper">
+  <div class="sidebar left">
 
-  <!-- Content container -->
-  <div class="tab-content mt-4" id="season-content">
-    <div class="text-muted">Loading...</div>
+  </div>
+  <div class="esea-wrapper">
+    <ul class="season-nav nav nav-tabs" id="eseaTabs" role="tablist">
+      {% for season in season_info %}
+        {% set label = "" %}
+        {% if season.event_start and season.event_end %}
+          {% if current_time >= season.event_start and current_time <= season.event_end %}
+            {% set label = "ongoing" %}
+          {% elif current_time >= season.event_start - 604800 and current_time < season.event_start %} {# 604800 seconds = 7 days #}
+            {% set label = "starting soon" %}
+          {% endif %}
+        {% endif %}
+        <li class="nav-item" role="presentation">
+          <button 
+            class="nav-link d-flex align-items-center gap-2 {% if loop.first %}active{% endif %}" 
+            id="season-tab-{{ season.season_number }}"
+            data-season="{{ season.season_number }}"
+            type="button"
+            role="tab"
+          >
+            <span>Season {{ season.season_number }}</span>
+            {% if label %}
+              <span class="badge bg-secondary">{{ label }}</span>
+            {% endif %}
+          </button>
+        </li>
+      {% endfor %}
+    </ul>
+
+    <!-- Content container -->
+    <div class="tab-content mt-4" id="season-content">
+      <div class="text-muted">Loading...</div>
+    </div>
+  </div>
+  <div class="sidebar right">
+    <div class="todays-matches">
+      <div class="todays-matches-header">
+        Today's Matches
+      </div>
+      <div class="todays-matches-content">
+        {% if todays_matches %}
+          {% for division, matches in todays_matches.items() %}
+            <div class="todays-matches-division">
+              {{ division }}
+            </div>
+            {% for match in matches %}
+              <a class="todays-match-box {{ 'highlight-border' if match.opponent.is_benelux else '' }}" 
+                href="https://www.faceit.com/en/cs2/room/{{ match.match_id }}" 
+                target="_blank", 
+                rel="noopener noreferrer">
+
+                  <div class="team team-left {{ 'highlight-text' if match.team.is_benelux else '' }}">
+                    <span>{{ match.team.team_name }}</span>
+                  </div>
+                  <div class="match-time">
+                    <span>{{ match.match_time | datetimeformat('%H:%M') }}</span>
+                  </div>
+                  <div class="team team-right {{ 'highlight-text' if match.opponent.is_benelux else '' }}">
+                    <span>{{ match.opponent.team_name }}</span>
+                  </div>
+              </a>
+            {% endfor %}
+          {% endfor %}
+        {% else %}
+          <div class="text-muted">No matches scheduled for today.</div>
+        {% endif %}
+    </div>
   </div>
 </div>
 
