--- a/BeneluxWebb/static/css/pages/base.css
+++ b/BeneluxWebb/static/css/pages/base.css
@@ -1,3 +1,15 @@
+:root {
+    --max-width-content: 1500px;
+}
+
+.container-boxed {
+    max-width: var(--max-width-content);
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 .footer-box {
     border-top: 1px solid var(--card-bg-secondary);
     background-color: var(--card-bg); /* Or match your theme */
