--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <script defer data-domain="beneluxcs.nl" src="https://analytics.beneluxcs.nl/js/script.js"></script>
 
     <!-- Bootstrap and icon fonts -->
     <link
