--- a/BeneluxWebb/templates/partials/_esea_season.html
+++ b/BeneluxWebb/templates/partials/_esea_season.html
@@ -204,7 +204,7 @@
                                     </span>
                                 </div>
 
-                                <div class="match-time">
+                                <div class="match-time upcoming">
                                     <span>
                                         {% if match.match_time %}
                                             {{ match.match_time | datetimeformat('%d/%m %H:%M') }}
