--- a/BeneluxWebb/static/css/base/lightmode.css
+++ b/BeneluxWebb/static/css/base/lightmode.css
@@ -4,6 +4,11 @@ body.light-mode {
   --secondary: #005f87;
   --background: #eeeeee;
   --foreground: #121212;
+
+  --navbar-bg: #005f87;
+  --navbar-text: #121212;
+  --navbar-border: ;
+
   --card-bg: #e4e5f1;
   --card-bg-secondary: #f0f1f5;
   --card-bg-highlight: #f8f9fa;
