--- a/BeneluxWebb/static/css/components/navbar.css
+++ b/BeneluxWebb/static/css/components/navbar.css
@@ -1,128 +1,225 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato&display=swap');
 /* navbar.css */
 :root {
-  --navbar-height: 50px;
+  --navbar-height: 60px;
 }
 
 /* === Navbar === */
-.navbar {
-  color: white;
-  background-color: var(--background) !important;
-  border-bottom: 1px solid var(--border);
-  min-height: var(--navbar-height);
-}
-
 .navbar-container {
-  height: var(--navbar-height);
+  display: flex;
   width: 100%;
   max-width: 100%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
+  height: var(--navbar-height);
+  overflow: visible;
+
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.1);
+  background-color: var(--navbar-bg);
+  
+  position: fixed;
+  z-index: 9999;
 }
 
-.container-boxed {
-  /* height: 100%; */
-  display: flex;
+.container-boxed.navbar-boxed {
   width: 100%;
-  justify-content: space-between;
+  min-height: var(--navbar-height);
+  padding: 0;
+  display: flex;
   align-items: center;
 }
 
 /* === Navbar Brand === */
-.navbar-brand {
-  display: flex;
-  align-items: center;
+.nav-logo { 
   height: var(--navbar-height);
-  padding: 0;
 }
-.navbar-brand img {
-  max-height: 100%;
-  height: auto;
+.nav-logo-small img {
+  height: var(--navbar-height);
   width: auto;
-  display: block;
 }
 
-/* === Navbar Links === */
-.collapse.navbar-collapse {
-  flex: 1 1 auto;
-  min-width: 0;
-  overflow: hidden;
-  justify-content: center;
-
-  border: 1px solid red;
-}
-.navbar-nav {
+/* === Navbar links (items) === */
+.nav-links{
   display: flex;
-  flex-wrap: nowrap;
-  white-space: nowrap;
-  overflow: hidden;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
 
   gap: 2rem;
-}
-.navbar-nav .nav-link {
-  color: var(--foreground);
-  transition: color 0.3s ease;
-  font-size: 1.2rem;
-}
-.navbar-nav .nav-link.active {
-  font-weight: bold;
-  border-bottom: 2px solid var(--primary);
-  background-color: transparent;
-  color: var(--primary);
-}
-.navbar-nav .nav-link:hover {
-  color: var(--accent) !important;
+
+  list-style: none;
 }
 
-/* === Toggler === */
-.navbar-toggler {
-  border-color: rgba(255, 255, 255, 0.1);
-}
-.navbar-toggler-icon {
-  filter: invert(100%);
+.nav-links li a{
+  font-family: 'Inter', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 500;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--navbar-text);
 }
 
-.nav-item {
-  background: rgba(255,255,255,0.05);
-  border: 1px dashed orange;
+.nav-links li a:hover {
+  color: red;
+}
+
+.nav-links li {
+  position: relative;
+}
+
+.nav-links li a::before {
+  content: '';
+  display: block;
+  height: 3px;
+  width: 0%;
+  background-color: #f39c12;
+  position: absolute;
+  transition: all ease-in-out 0.3s;
+  margin: 0 0 0 10%;
+}
+
+.nav-links li a:hover::before {
+  width: 80%;
 }
 
 /* === Dark mode toggle === */
+.darkmode-toggle {
+  display: flex;
+  align-items: center;
+  margin-inline-start: auto;
+}
 .checkbox {
   opacity: 0;
   position: absolute;
-  width: 0;
-  height: 0;
 }
+
 .checkbox-label {
   background-color: #111;
   width: 50px;
   height: 26px;
   border-radius: 50px;
+  position: relative;
   padding: 5px;
+  cursor: pointer;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  cursor: pointer;
-  position: relative;
 }
-.fa-moon {
-  color: #f1c40f;
-}
-.fa-sun {
-  color: #f39c12;
-}
+
+.fa-moon {color: #f1c40f;}
+
+.fa-sun {color: #f39c12;}
+
 .checkbox-label .ball {
   background-color: #fff;
   width: 22px;
   height: 22px;
   position: absolute;
-  top: 2px;
   left: 2px;
+  top: 2px;
   border-radius: 50%;
   transition: transform 0.2s linear;
-  z-index: 1;
 }
+
 .checkbox:checked + .checkbox-label .ball {
   transform: translateX(24px);
+}
+
+/* === Styling Hamburger icon === */
+.hamburger div {
+  width: 30px;
+  height: 3px;
+  background: #f2f5f7;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+.hamburger{
+  display: none;
+}
+
+/* Styling for small screens */
+@media screen and (max-width: 800px){
+  .navbar-boxed {
+    max-width: 100% !important;
+    width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
+  .container-boxed.navbar-boxed {
+    max-width: 100% !important;
+    width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
+  .hamburger{
+      display:block;
+      position: absolute;
+      cursor: pointer;
+      right: 5%;
+      top: 50%;
+      transform: translate(-5%, -50%);
+      z-index: 2;
+      transition: all 0.7s ease;
+  }
+
+  .darkmode-toggle {
+      display: none;
+  }
+
+  .nav-links{
+      position: fixed;
+      background: #131418;
+      height: 100vh;
+      width: 100%;
+      flex-direction: column;
+      clip-path: circle(50px at 90% -20%);
+      -webkit-clip-path: circle(50px at 90% -10%);
+      transition: all 1s ease-out;
+      pointer-events: none;
+  }
+  .nav-links.open{
+      clip-path: circle(1000px at 90% -10%);
+      -webkit-clip-path: circle(1000px at 90% -10%);
+      pointer-events: all;
+  }
+  .nav-links li{
+      opacity: 0;
+  }
+  .nav-links li:nth-child(1){
+      transition: all 0.5s ease 0.2s;
+  }
+  .nav-links li:nth-child(2){
+      transition: all 0.5s ease 0.4s;
+  }
+  .nav-links li:nth-child(3){
+      transition: all 0.5s ease 0.6s;
+  }
+  .nav-links li:nth-child(4){
+      transition: all 0.5s ease 0.7s;
+  }
+  .nav-links li:nth-child(5){
+      transition: all 0.5s ease 0.8s;
+  }
+  .nav-links li:nth-child(6){
+      transition: all 0.5s ease 0.9s;
+      margin: 0;
+  }
+
+  li.fade{
+      opacity: 1;
+  }
+}
+
+/*Animating Hamburger Icon on Click*/
+.toggle .line1{
+    transform: rotate(-45deg) translate(-5px,6px);
+}
+.toggle .line2{
+    transition: all 0.7s ease;
+    width:0;
+}
+.toggle .line3{
+    transform: rotate(45deg) translate(-5px,-6px);
 }
