--- a/BeneluxWebb/static/css/pages/base.css
+++ b/BeneluxWebb/static/css/pages/base.css
@@ -2,12 +2,15 @@
     --max-width-content: 1500px;
 }
 
+.content-container {
+    padding-top: var(--navbar-height);
+}
+
 .container-boxed {
     max-width: var(--max-width-content);
     margin-left: auto;
     margin-right: auto;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0 1rem;
 }
 
 .footer-box {
