Changed way team  names are displayed so that they only display the current name if the season is ongoing

--- a/BeneluxWebb/templates/partials/_esea_season.html
+++ b/BeneluxWebb/templates/partials/_esea_season.html
@@ -34,7 +34,7 @@
                     <!-- Team name top left -->
                     <div class="team-card-name">
                         <a class="team-link" href="https://www.faceit.com/en/teams/{{ team.team_id }}/leagues" target="_blank">
-                            {{ team.team_name }}
+                            {{ team.team_name_cur }}
                         </a>
                     </div>
 
